--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-ionicons": "^3.1.4",
+    "react-ionicons": "2.1.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5"
